# Aggregator

./: .gitignore  README.md  pyproject.toml
app/: aggregator.py  config.py  telegram_bot.py
