[tool.poetry]
name = "aggregator"
version = "1.0.0"
description = "Aggregator for RLT"
authors = ["Alexander Platonov <sasa20sasha19910@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.25"
aiofiles = "^23.2.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
